# manus-cli

./: .gitignore  ARCHITECTURE_V4.md  BUGS_FOUND.md  CHANGELOG.md  CHANGELOG_V3.md  CODE_REVIEW.md  EXAMPLES.md  FINAL_VERIFICATION.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  README_V2_BACKUP.md  RELEASE_v5.4.0.md  TEST_REPORT.md  TEST_RESULTS.md  UPDATE_GUIDE.md  pyproject.toml  requirements.txt  setup.py
manus_cli/: __init__.py  __main__.py  __main_enhanced__.py  __main_v3__.py  __main_v4__.py  analytics.py  api.py  api_enhanced.py  cli.py  cli_enhanced.py  cli_v3.py  cli_v4.py  cot.py  effort.py  error_handling_v2.py  extended_thinking.py  loading.py  roles.py  session.py  spec_driven.py  splash.py  streaming_v2.py  system_prompts_v2.py  template_library.py  updater.py  xml_structure.py
manus_cli/cache/: __init__.py
manus_cli/context/: __init__.py
manus_cli/evaluation/: __init__.py
manus_cli/integrations/: cicd.py  github.py
manus_cli/monitoring/: __init__.py
manus_cli/speckit/: __init__.py  clarify.py  constitution.py  core.py  diagrams.py  enhancements.py  implement.py  plan.py  specify.py  tasks.py
manus_cli/validation/: __init__.py  schemas.py  validators.py
tests/: README.md  test_v5.1_features.py  test_v5.2_features.py
